--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     Your browser does not support the audio element.
                 </audio>`;
         } else {
-            document.getElementById('content').textContent = "This audio will be available on December 25, 2024.";
+            document.getElementById('content').textContent = "This audio will be available Soon.";
         }
     </script>
 </body>
